Use a single crate library + bin/*.rs structure
This flattens the directory structure of the sources, and Cargo will
automatically build each src/bin/*.rs as an executable, so for each new
problem one just needs to create a single file. Also, this allows to
move shared code to src/lib.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "day01"
+name = "aoc2017"
 version = "0.1.0"
 authors = ["Adrian Perez de Castro <aperez@igalia.com>"]
 
 [dependencies]
+
+[profile.release]
+lto = true
