--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Adrian Perez de Castro <aperez@igalia.com>"]
 
 [dependencies]
+ego-tree = "0.1"
+failure = "0.1"
 permutohedron = "0.2"
 
 [profile.release]
