--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 authors = ["Adrian Perez de Castro <aperez@igalia.com>"]
 
 [dependencies]
+bit-vec = "0.4"
 ego-tree = "0.1"
 failure = "0.1"
+num = "0.1"
 permutohedron = "0.2"
 
 [profile.release]
